--- a/index.html
+++ b/index.html
@@ -1,75 +1,89 @@
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Chris99's Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <header>
     <div class="container">
       <h1>Chris99's Portfolio</h1>
       <nav>
-        <a href="#about">About Me</a>
+        <a href="#about">About</a>
         <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
       </nav>
     </div>
   </header>
 
-  <main>
-    <section id="about">
-      <div class="container">
-        <h2>About Me</h2>
-        <p>Hello! I'm Chris, a passionate developer eager to build great web experiences.</p>
-        <h3>Tools & Proficiencies</h3>
-        <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>Git & GitHub</li>
-          <li>Playwright</li>
-          <li>Postman</li>
-          <li>VS Code</li>
-        </ul>
-      </div>
-    </section>
+  <section id="about" class="section">
+    <div class="container">
+      <h2>About Me</h2>
+      <p>Hello! I'm Chris, a passionate web developer eager to build clean, responsive, and accessible web experiences. </p>
+      <h3>Skills & Tools</h3>
+      <ul class="skills">
+        <li>HTML5</li>
+        <li>CSS3</li>
+        <li>JavaScript</li>
+        <li>Git & GitHub</li>
+        <li>Responsive Web Design</li>
+        <li>VS Code</li>
+      </ul>
+    </div>
+  </section>
 
-    <section id="projects">
-      <div class="container">
-        <h2>Projects</h2>
-        <div class="projects-grid">
-          <div class="project-card">
-            <h3>Portfolio Website</h3>
-            <p>A personal website to showcase my projects and skills.</p>
-          </div>
-          <div class="project-card">
-            <h3>Todo List App</h3>
-            <p>A simple and clean todo list with local storage.</p>
-          </div>
-          <div class="project-card">
-            <h3>Weather Dashboard</h3>
-            <p>Check weather forecasts using OpenWeather API.</p>
-          </div>
+  <section id="projects" class="section">
+    <div class="container">
+      <h2>Projects</h2>
+      <div class="projects-grid">
+        <div class="project-card">
+          <h3>Portfolio Website</h3>
+          <p>Modern and responsive personal portfolio built with HTML, CSS, and JS.</p>
+        </div>
+        <div class="project-card">
+          <h3>Todo List App</h3>
+          <p>Simple task management web app using local storage.</p>
+        </div>
+        <div class="project-card">
+          <h3>Weather Dashboard</h3>
+          <p>Weather app that fetches live data using APIs and shows forecasts.</p>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section id="contact">
-      <div class="container">
-        <h2>Contact Me</h2>
-        <p>Email: chris@example.com</p>
-        <p>Phone: 123-456-7890</p>
-        <p>GitHub: <a href="https://github.com/Chris99-j" target="_blank">github.com/Chris99-j</a></p>
-      </div>
-    </section>
-  </main>
+  <section id="contact" class="section">
+    <div class="container">
+      <h2>Contact Me</h2>
+      <form id="contact-form">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required />
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required />
+
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" rows="4" required></textarea>
+
+        <button type="submit">Send</button>
+      </form>
+      <p id="form-response"></p>
+    </div>
+  </section>
 
   <footer>
     <div class="container">
       <p>&copy; 2025 Chris99. All rights reserved.</p>
     </div>
   </footer>
+
+  <script src="script.js"></script>
 </body>
+
 </html>
