--- a/index.html
+++ b/index.html
@@ -1,89 +1,43 @@
-
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chris99's Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Minimalist Portfolio</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
-
 <body>
-  <header>
-    <div class="container">
-      <h1>Chris99's Portfolio</h1>
-      <nav>
-        <a href="#about">About</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
-      </nav>
-    </div>
-  </header>
 
-  <section id="about" class="section">
-    <div class="container">
-      <h2>About Me</h2>
-      <p>Hello! I'm Chris, a passionate web developer eager to build clean, responsive, and accessible web experiences. </p>
-      <h3>Skills & Tools</h3>
-      <ul class="skills">
-        <li>HTML5</li>
-        <li>CSS3</li>
-        <li>JavaScript</li>
-        <li>Git & GitHub</li>
-        <li>Responsive Web Design</li>
-        <li>VS Code</li>
-      </ul>
-    </div>
+  <nav id="navbar">
+    <a href="#about" class="nav-link">About Me</a>
+    <a href="#projects" class="nav-link">Projects</a>
+    <a href="#contact" class="nav-link">Contact Me</a>
+  </nav>
+
+  <section id="about">
+    <h1>About Me</h1>
+    <p>Hello! I'm [Your Name], a passionate developer who loves building clean and functional websites. I specialize in [your skills or specialties]. Welcome to my minimalist portfolio!</p>
   </section>
 
-  <section id="projects" class="section">
-    <div class="container">
-      <h2>Projects</h2>
-      <div class="projects-grid">
-        <div class="project-card">
-          <h3>Portfolio Website</h3>
-          <p>Modern and responsive personal portfolio built with HTML, CSS, and JS.</p>
-        </div>
-        <div class="project-card">
-          <h3>Todo List App</h3>
-          <p>Simple task management web app using local storage.</p>
-        </div>
-        <div class="project-card">
-          <h3>Weather Dashboard</h3>
-          <p>Weather app that fetches live data using APIs and shows forecasts.</p>
-        </div>
-      </div>
-    </div>
+  <section id="projects">
+    <h2>Projects</h2>
+    <p>Here are a few projects I’ve worked on:</p>
+    <ul>
+      <li><strong>Project One</strong> – Description of project one.</li>
+      <li><strong>Project Two</strong> – Description of project two.</li>
+      <li><strong>Project Three</strong> – Description of project three.</li>
+    </ul>
   </section>
 
-  <section id="contact" class="section">
-    <div class="container">
-      <h2>Contact Me</h2>
-      <form id="contact-form">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required />
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required />
-
-        <label for="message">Message:</label>
-        <textarea id="message" name="message" rows="4" required></textarea>
-
-        <button type="submit">Send</button>
-      </form>
-      <p id="form-response"></p>
-    </div>
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <p>You can reach me via email at <a href="mailto:your.email@example.com">your.email@example.com</a> or follow me on <a href="https://linkedin.com/in/yourprofile" target="_blank" rel="noopener noreferrer">LinkedIn</a>.</p>
   </section>
 
   <footer>
-    <div class="container">
-      <p>&copy; 2025 Chris99. All rights reserved.</p>
-    </div>
+    &copy; 2025 Chris All rights reserved.
   </footer>
 
   <script src="script.js"></script>
 </body>
-
 </html>
