Update portfolio pages: index, style, and script

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
     </section>
   </main>
 
+  <button id="dark-mode-toggle" aria-label="Toggle dark mode" title="Toggle dark mode">🌙</button>
+
   <script src="script.js"></script>
 </body>
 </html>
