--- a/index.html
+++ b/index.html
@@ -2,54 +2,89 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Christopher Balolong | Portfolio</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Interactive UI Webpage</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-  <header>
-    <nav role="tablist" aria-label="Primary">
-      <button class="tab-btn active" role="tab" aria-selected="true" aria-controls="about" id="tab-about" data-target="about">About Me</button>
-      <button class="tab-btn" role="tab" aria-selected="false" aria-controls="projects" id="tab-projects" data-target="projects">Projects</button>
-      <button class="tab-btn" role="tab" aria-selected="false" aria-controls="contact" id="tab-contact" data-target="contact">Contact Me</button>
-    </nav>
-  </header>
+<body class="dark-mode">
+  <div style="text-align: right; padding: 10px;">
+    <button onclick="toggleDarkMode()" style="padding: 5px 10px; cursor: pointer;">🌙 Toggle Dark Mode</button>
+  </div>
 
-  <main>
-    <section id="about" class="tab-panel active" role="tabpanel" tabindex="0" aria-labelledby="tab-about">
-      <h1>Christopher Balolong</h1>
-      <p>System Developer | QA Tester | Cybersecurity Intern</p>
-      <p>Full-stack developer with 2+ years experience in PHP, CodeIgniter, MySQL, and secure coding practices. Skilled in testing and automation with Playwright, Postman, Swagger, and Jira.</p>
-      <p>Location: Dagupan City, Philippines</p>
-    </section>
+  <div class="carousel-container">
+    <div class="carousel">
+      <div class="carousel-track">
+        <div class="carousel-item">
+          <div class="carousel-title">Web Development</div>
+          <div class="carousel-description">Building responsive and modern websites</div>
+        </div>
+        <div class="carousel-item">
+          <div class="carousel-title">QA Automation</div>
+          <div class="carousel-description">Automating tests to ensure product quality</div>
+        </div>
+        <div class="carousel-item">
+          <div class="carousel-title">Cybersecurity Analyst</div>
+          <div class="carousel-description">Protecting systems from cyber threats</div>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-buttons">
+      <button onclick="prevSlide()">Prev</button>
+      <button onclick="nextSlide()">Next</button>
+    </div>
+  </div>
 
-    <section id="projects" class="tab-panel" role="tabpanel" tabindex="0" aria-labelledby="tab-projects" hidden>
-      <h2>Projects</h2>
-      <ul>
-        <li>Human Resources Management System</li>
-        <li>Online Assistance System</li>
-        <li>Business Permit System</li>
-        <li>Emergency Reporting System</li>
-        <li>Public Information System</li>
-        <li>Case Management System</li>
-        <li>Online Market System</li>
-        <li>Online Payment System</li>
-        <li>Online Ticketing System</li>
-        <li>Project Management System</li>
-        <li>Electricity Top-Up System</li>
+  <div class="about-section">
+    <div class="about-tabs">
+        
+      <button onclick="showAbout('skills')">Skills & Tools</button>
+      <button onclick="showAbout('aboutme')">About me</button>
+      <button onclick="showAbout('personalinfo')">Personal info</button>
+      <button onclick="showAbout('education')">Education</button>
+    </div>
+     <div id="skills" class="about-content active">
+      <div class="skills-container-grid">
+        <div class="skill-box"><strong>🔧 Programming & Scripting</strong><br>PHP, JavaScript, Python, SQL, HTML, CSS, TypeScript</div>
+        <div class="skill-box"><strong>🧰 Frameworks & Libraries</strong><br>CodeIgniter (PHP), Bootstrap, PHPMaker</div>
+        <div class="skill-box"><strong>✅ QA & Automation</strong><br>Manual Testing, Playwright, Selenium, JIRA, Trello, Postman, Swagger</div>
+        <div class="skill-box"><strong>🗃️ Databases & Tools</strong><br>MySQL, PgAdmin, Navicat, WAMPserver</div>
+        <div class="skill-box"><strong>🌐 Web Development</strong><br>PHP & CodeIgniter, CRUD Systems, Responsive Design</div>
+        <div class="skill-box"><strong>🧠 AI & Automation</strong><br>AI Tools, Optimization, Error Detection</div>
+        <div class="skill-box"><strong>🔐 Cybersecurity</strong><br>OWASP ZAP, Secure Coding, DB Security</div>
+        <div class="skill-box"><strong>📈 Project Management</strong><br>Agile, Trello, JIRA, Documentation</div>
+      </div>
+       </div>
+    <div id="aboutme" class="about-content">
+       <p class="about-text">Hi, I’m Christopher Balolong — a driven and detail-oriented professional with a focus on QA automation, web development, and aspiring cybersecurity. I specialize in writing clean, maintainable automation scripts using TypeScript and Playwright, enabling efficient and reliable testing for modern web applications. With a strong foundation in both manual and automated testing, I aim to ensure product quality through robust test coverage and scalable automation frameworks.</p>
+      <p class="about-text">I'm also expanding my skills in front-end web development, with a keen interest in building responsive, user-focused applications. In parallel, I’m actively exploring the field of cybersecurity, particularly in areas like web application security and vulnerability testing. Tools such as OWASP ZAP are helping me gain hands-on experience and deepen my understanding of secure coding practices and threat mitigation.</p>
+      <p class="about-text">While my professional path is rooted in tech, I also enjoy gaming and content creation as creative outlets. Streaming and sharing game content is a fun way I stay connected with digital culture and unwind after a day of coding and 
+    </div>
+   <div id="personalinfo" class="about-content">
+      <p class="about-text"><strong>Full Name:</strong> Christopher Balolong</p>
+      <p class="about-text"><strong>Email:</strong> christopherjohnbalolong@gmail.com</p>
+      <p class="about-text"><strong>Phone:</strong> +63 9923661223</p>
+      <p class="about-text"><strong>Address:</strong> Dagupan City, Pangasinan Philippines</p>
+      <p class="about-text"><strong>LinkedIn:</strong> <a href="https://ph.linkedin.com/in/christopher-balolong-b1b2b3270" target="_blank">https://ph.linkedin.com/in/christopher-balolong-b1b2b3270</a></p>
+      <p class="about-text"><strong>GitHub/Portfolio:</strong> <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
+       </div>
+
+  <div id="education" class="about-content">
+      <p class="about-text"><strong>Universidad de Dagupan</strong></p>
+      <p class="about-text">Bachelor of Science in Information Technology</p>
+      <p class="about-text">Graduated: August 2022</p>
+      <p class="about-text"><strong>Relevant coursework:</strong> Web Development, System Analyst, Network Security, Cybersecurity</p>
+      <p class="about-text"><strong>Certifications:</strong></p>
+      <ul class="about-text">
+        <li>Cisco Introduction to Cybersecurity</li>
+        <li>Cybersecurity Essentials</li>
+        <li>CCNA: Introduction to Networks</li>
+        <li>CCNA: Routing and Switching Essentials</li>
+        <li>CCNA: Scaling Networks</li>
       </ul>
-    </section>
-
-    <section id="contact" class="tab-panel" role="tabpanel" tabindex="0" aria-labelledby="tab-contact" hidden>
-      <h2>Contact Me</h2>
-      <p>Email: christopherjohnbalolong@gmail.com</p>
-      <p>Phone: 09923661223</p>
-      <p>Location: Dagupan City, Pangasinan, Philippines</p>
-    </section>
-  </main>
-
-  <button id="dark-mode-toggle" aria-label="Toggle dark mode" title="Toggle dark mode">🌙</button>
+    </div>
+   
+    </div>
 
   <script src="script.js"></script>
 </body>
-</html>
+</html> 
