--- a/index.html
+++ b/index.html
@@ -2,89 +2,182 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Interactive UI Webpage</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Christopher Balolong | Portfolio</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
-<body class="dark-mode">
-  <div style="text-align: right; padding: 10px;">
-    <button onclick="toggleDarkMode()" style="padding: 5px 10px; cursor: pointer;">🌙 Toggle Dark Mode</button>
+<body>
+  <header>
+    <div class="logo">Christopher Balolong</div>
+    <nav>
+      <ul>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><button id="themeToggle">🌙</button></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <h1>Hello, I'm <span>Christopher</span></h1>
+    <p>SQA Automation Engineer & Fullstack Developer & Aspiring Cybersecurity</p>
+    <a href="#projects" class="btn">View My Work</a>
+  </section>
+<section id="projects" class="projects">
+  <h2>Featured Projects</h2>
+  <div class="project-grid">
+    <div class="project-card" data-project-id="1">
+      <img src="assets/images/hr.jpg" alt="HR Management System" />
+      <h3>TalentFlow HR Suite</h3>
+      <p>Oversees recruitment, employee records, payroll, leave management, and performance evaluations with secure, role-based access.</p>
+    </div>
+    <div class="project-card" data-project-id="2">
+      <img src="assets/images/asisstance.jpg" alt="Online Assistance System" />
+      <h3>CivicAid Request Portal or Request Assistance System</h3>
+      <p>Enables submission, approval, and monitoring of various forms of client or public assistance requests with a seamless UI.</p>
+    </div>
+    <div class="project-card" data-project-id="3">
+      <img src="assets/images/business.jpg" alt="Online Business Permit System" />
+      <h3>Permit Express or Business Permit System</h3>
+      <p>Automates permit applications, renewals, and compliance for businesses with real-time status tracking and approval workflow.</p>
+    </div>
+    <div class="project-card" data-project-id="4">
+      <img src="assets/images/emergency.jpg" alt="Online Emergency System" />
+      <h3>Alert Response or Emergency Alert System</h3>
+      <p>Facilitates real-time emergency reporting and response coordination with automated alert notifications for quick deployment.</p>
+    </div>
+    <div class="project-card" data-project-id="5">
+      <img src="assets/images/announcement.png" alt="Public Information System" />
+      <h3>Information Center System</h3>
+      <p>Publishes official announcements, community updates, and public records via an admin-controlled content management interface.</p>
+    </div>
+    <div class="project-card" data-project-id="6">
+      <img src="assets/images/casemanagement.jpg" alt="Case Management System" />
+      <h3>JusticeTrack Management System</h3>
+      <p>Tracks, updates, and resolves cases with role-based access, status monitoring, and case analytics tools.</p>
+    </div>
+    <div class="project-card" data-project-id="7">
+      <img src="assets/images/marketplace.jpg" alt="Online Market System" />
+      <h3>Online Shopping System</h3>
+      <p>Includes vendor registration, product listings, cart management, payment processing, and customer feedback tools.</p>
+    </div>
+    <div class="project-card" data-project-id="8">
+      <img src="assets/images/onlinepayments.png" alt="Online Payment System" />
+      <h3>Payment System</h3>
+      <p>Processes digital payments with invoicing, billing, and automatic confirmation notifications.</p>
+    </div>
+    <div class="project-card" data-project-id="9">
+      <img src="assets/images/e-ticketing.jpg" alt="Online Ticketing System" />
+      <h3>Ease Ticketing System</h3>
+      <p>Handles event ticket sales, reservations, payment, and support all in one integrated platform.</p>
+    </div>
+    <div class="project-card" data-project-id="10">
+      <img src="assets/images/management.jpg" alt="Project Management System" />
+      <h3>Project Management System</h3>
+      <p>Enables collaborative task planning, resource allocation, and project tracking with user role controls.</p>
+    </div>
+    <div class="project-card" data-project-id="11">
+      <img src="assets/images/load.jpg" alt="Electricity Load System" />
+      <h3>PowerTop Prepaid Utility Platform</h3>
+      <p>Allows users to purchase prepaid electricity credits and view transaction history via QR codes and Central Payment System.</p>
+    </div>
   </div>
+</section>
 
-  <div class="carousel-container">
-    <div class="carousel">
-      <div class="carousel-track">
-        <div class="carousel-item">
-          <div class="carousel-title">Web Development</div>
-          <div class="carousel-description">Building responsive and modern websites</div>
-        </div>
-        <div class="carousel-item">
-          <div class="carousel-title">QA Automation</div>
-          <div class="carousel-description">Automating tests to ensure product quality</div>
-        </div>
-        <div class="carousel-item">
-          <div class="carousel-title">Cybersecurity Analyst</div>
-          <div class="carousel-description">Protecting systems from cyber threats</div>
-        </div>
-      </div>
-    </div>
-    <div class="carousel-buttons">
-      <button onclick="prevSlide()">Prev</button>
-      <button onclick="nextSlide()">Next</button>
-    </div>
+<!-- Modal -->
+<div id="projectModal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <h3 id="modalTitle">Project Title</h3>
+    <img id="modalImage" src="" alt="" style="width:100%; border-radius:8px; margin-bottom:1rem;" />
+    <p id="modalDescription">Project description goes here.</p>
   </div>
+</div>
 
-  <div class="about-section">
-    <div class="about-tabs">
-        
-      <button onclick="showAbout('skills')">Skills & Tools</button>
-      <button onclick="showAbout('aboutme')">About me</button>
-      <button onclick="showAbout('personalinfo')">Personal info</button>
-      <button onclick="showAbout('education')">Education</button>
-    </div>
-     <div id="skills" class="about-content active">
-      <div class="skills-container-grid">
-        <div class="skill-box"><strong>🔧 Programming & Scripting</strong><br>PHP, JavaScript, Python, SQL, HTML, CSS, TypeScript</div>
-        <div class="skill-box"><strong>🧰 Frameworks & Libraries</strong><br>CodeIgniter (PHP), Bootstrap, PHPMaker</div>
-        <div class="skill-box"><strong>✅ QA & Automation</strong><br>Manual Testing, Playwright, Selenium, JIRA, Trello, Postman, Swagger</div>
-        <div class="skill-box"><strong>🗃️ Databases & Tools</strong><br>MySQL, PgAdmin, Navicat, WAMPserver</div>
-        <div class="skill-box"><strong>🌐 Web Development</strong><br>PHP & CodeIgniter, CRUD Systems, Responsive Design</div>
-        <div class="skill-box"><strong>🧠 AI & Automation</strong><br>AI Tools, Optimization, Error Detection</div>
-        <div class="skill-box"><strong>🔐 Cybersecurity</strong><br>OWASP ZAP, Secure Coding, DB Security</div>
-        <div class="skill-box"><strong>📈 Project Management</strong><br>Agile, Trello, JIRA, Documentation</div>
-      </div>
-       </div>
-    <div id="aboutme" class="about-content">
-       <p class="about-text">Hi, I’m Christopher Balolong — a driven and detail-oriented professional with a focus on QA automation, web development, and aspiring cybersecurity. I specialize in writing clean, maintainable automation scripts using TypeScript and Playwright, enabling efficient and reliable testing for modern web applications. With a strong foundation in both manual and automated testing, I aim to ensure product quality through robust test coverage and scalable automation frameworks.</p>
-      <p class="about-text">I'm also expanding my skills in front-end web development, with a keen interest in building responsive, user-focused applications. In parallel, I’m actively exploring the field of cybersecurity, particularly in areas like web application security and vulnerability testing. Tools such as OWASP ZAP are helping me gain hands-on experience and deepen my understanding of secure coding practices and threat mitigation.</p>
-      <p class="about-text">While my professional path is rooted in tech, I also enjoy gaming and content creation as creative outlets. Streaming and sharing game content is a fun way I stay connected with digital culture and unwind after a day of coding and 
-    </div>
-   <div id="personalinfo" class="about-content">
-      <p class="about-text"><strong>Full Name:</strong> Christopher Balolong</p>
-      <p class="about-text"><strong>Email:</strong> christopherjohnbalolong@gmail.com</p>
-      <p class="about-text"><strong>Phone:</strong> +63 9923661223</p>
-      <p class="about-text"><strong>Address:</strong> Dagupan City, Pangasinan Philippines</p>
-      <p class="about-text"><strong>LinkedIn:</strong> <a href="https://ph.linkedin.com/in/christopher-balolong-b1b2b3270" target="_blank">https://ph.linkedin.com/in/christopher-balolong-b1b2b3270</a></p>
-      <p class="about-text"><strong>GitHub/Portfolio:</strong> <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
-       </div>
 
-  <div id="education" class="about-content">
-      <p class="about-text"><strong>Universidad de Dagupan</strong></p>
-      <p class="about-text">Bachelor of Science in Information Technology</p>
-      <p class="about-text">Graduated: August 2022</p>
-      <p class="about-text"><strong>Relevant coursework:</strong> Web Development, System Analyst, Network Security, Cybersecurity</p>
-      <p class="about-text"><strong>Certifications:</strong></p>
-      <ul class="about-text">
-        <li>Cisco Introduction to Cybersecurity</li>
-        <li>Cybersecurity Essentials</li>
-        <li>CCNA: Introduction to Networks</li>
-        <li>CCNA: Routing and Switching Essentials</li>
-        <li>CCNA: Scaling Networks</li>
+
+ <section id="about">
+  <h2>About Me</h2>
+  <p>
+    I'm a multidisciplinary System Developer, QA Tester, and aspiring Cybersecurity Specialist with over two years of hands-on experience building and testing secure, user-centric web applications. My work bridges the gap between function and form—balancing backend logic, frontend clarity, and user experience.
+  </p>
+  <p>
+    I’ve designed and tested systems ranging from HR management to emergency platforms, using tools like PHP, CodeIgniter, Playwright, Swagger, and JIRA. Whether I’m wireframing a new feature, validating APIs, or crafting scalable databases, I prioritize clean architecture, intuitive flows, and security by design.
+  </p>
+  <p>
+    I'm passionate about improving digital experiences through thoughtful design, data-driven testing, and automation. I’m currently deepening my skills in cybersecurity (CCNA track) while building real-world solutions that solve practical problems.
+  </p>
+
+  <h3>Skills & Tools</h3>
+  <div class="skills-grid">
+    <div class="skill-card">
+      <h4>Languages</h4>
+      <ul>
+        <li>PHP</li>
+        <li>JavaScript</li>
+        <li>Python</li>
+        <li>SQL</li>
+        <li>HTML & CSS</li>
+        <li>Typescript</li>
       </ul>
     </div>
-   
+    <div class="skill-card">
+      <h4>Frameworks & Libraries</h4>
+      <ul>
+        <li>CodeIgniter</li>
+        <li>Bootstrap</li>
+        <li>Playwright (Automation Testing)</li>
+        <li>PHPMaker</li>
+      </ul>
     </div>
+    <div class="skill-card">
+      <h4>Testing & QA Tools</h4>
+      <ul>
+        <li>JIRA</li>
+        <li>Swagger</li>
+        <li>Postman</li>
+        <li>Manual Testing</li>
+        <li>Selenium</li>
+        <li>Playwright + Typescript</li>
+      </ul>
+    </div>
+    <div class="skill-card">
+      <h4>Databases & Tools</h4>
+      <ul>
+        <li>MySQL</li>
+        <li>PgAdmin</li>
+        <li>Navicat</li>
+        <li>WAMPserver</li>
+      </ul>
+    </div>
+    <div class="skill-card">
+      <h4>Cybersecurity</h4>
+      <ul>
+        <li>Network Security Basics</li>
+        <li>Secure Coding Practices</li>
+        <li>Database Validation</li>
+        <li>CCNA Fundamentals</li>
+      </ul>
+    </div>
+  </div>
+</section>
+
+
+
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>If you'd like to collaborate or learn more about my work, feel free to reach out!</p>
+    <p><strong>Email:</strong> <a href="mailto:christopherjohnbalolong@gmail.com">christopherjohnbalolong@gmail.com</a></p>
+    <p><strong>Phone:</strong> 09923661223</p>
+    <p><strong>Location:</strong> Dagupan City, Pangasinan, Philippines</p>
+  </section>
+
+  <footer>
+    <p>© 2025 System. All rights reserved.</p>
+  </footer>
 
   <script src="script.js"></script>
 </body>
-</html> 
+</html>
