--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li><a href="#projects">Projects</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><button id="themeToggle">🌙</button></li>
+       <button id="themeToggle">🌙</button>
       </ul>
     </nav>
   </header>
